force-app/main/default/objects/Object_Mappings__c/Object_Mappings__c.object-meta.xml
<CustomObject>
    <label>Object Mappings</label>
    <nameField>
        <displayFormat>Obj Map -{000000}</displayFormat>
        <label>Object Mapping No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>