force-app/main/default/objects/Object_Mappings__c/fields/Calculated_Formula_fields__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Formula_fields__c</fullName>
    <formula>Total_Fields__c  -  Total_Mapping_Eligible_Field__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated/Formula fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>