force-app/main/default/objects/Object_Mappings__c/fields/Check_Source_And_Target__c.field-meta.xml
<CustomField>
    <fullName>Check_Source_And_Target__c</fullName>
    <formula>IF( Source_Object__c !=  Target_Object__c , &apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Source And Target</label>
    <type>Text</type>
</CustomField>