force-app/main/default/objects/Object_Mappings__c/fields/Delete_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Delete_Sequence_No__c</fullName>
    <label>Delete Sequence No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>