force-app/main/default/objects/Object_Mappings__c/fields/Destination_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object_Label__c</fullName>
    <label>Destination Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>