force-app/main/default/objects/Object_Mappings__c/fields/Removed_Field_Mapping_Count__c.field-meta.xml
<CustomField>
    <fullName>Removed_Field_Mapping_Count__c</fullName>
    <label>Removed Field Mapping Count</label>
    <summaryFilterItems>
        <field>Field_Mappings__c.Mapping_Included__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Field_Mappings__c.Source_Field_Label__c</field>
        <operation>notContain</operation>
        <value>(hide)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Field_Mappings__c.Static_Field_Indicator__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Field_Mappings__c.Object_Mapping__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>