force-app/main/default/objects/Object_Mappings__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence_Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>