force-app/main/default/objects/Object_Mappings__c/fields/Source_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Label__c</fullName>
    <label>Source Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>