force-app/main/default/objects/Object_Mappings__c/fields/Source_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Type__c</fullName>
    <label>Source Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>