force-app/main/default/objects/Object_Mappings__c/fields/Source_Recordtype_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_Recordtype_Label__c</fullName>
    <label>Source Recordtype Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>