force-app/main/default/objects/Object_Mappings__c/fields/Target_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Type__c</fullName>
    <label>Target Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>