force-app/main/default/objects/Object_Mappings__c/fields/Target_RecordType_Label__c.field-meta.xml
<CustomField>
    <fullName>Target_RecordType_Label__c</fullName>
    <label>Target RecordType Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>