force-app/main/default/objects/Object_Mappings__c/fields/Total_Fields__c.field-meta.xml
<CustomField>
    <fullName>Total_Fields__c</fullName>
    <label>Total Fields</label>
    <summaryFilterItems>
        <field>Field_Mappings__c.Static_Field_Indicator__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Field_Mappings__c.Object_Mapping__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>