force-app/main/default/objects/Object_Mappings__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <label>Total Records</label>
    <length>30</length>
    <type>Text</type>
</CustomField>